--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "codecov": "^2.3.0",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
+    "enzyme": "^2.9.1",
     "eslint": "^4.3.0",
     "eslint-plugin-jest": "^20.0.3",
     "faker": "^4.1.0",
@@ -41,6 +42,9 @@
     "main-bower-files": "^2.13.1",
     "mock-local-storage": "^1.0.4",
     "npm-run-all": "^4.0.2",
+    "preact-compat-enzyme": "^0.2.5",
+    "preact-render-to-string": "^3.6.3",
+    "preact-test-utils": "^0.1.3",
     "prettier-eslint-cli": "^4.1.1",
     "rimraf": "^2.6.1",
     "run-sequence": "^2.0.0",
@@ -52,9 +56,6 @@
     "webpack": "^3.3.0"
   },
   "homepage": "https://github.com/uncovertruth/userdive-tag-paster#readme",
-  "jest": {
-    "collectCoverage": true
-  },
   "keywords": [],
   "lint-staged": {
     "*.{js,jsx}": [
@@ -89,6 +90,6 @@
     "precommit": "lint-staged",
     "release": "gulp package",
     "tag": "uglifyjs app/tag.js -m",
-    "test": "jest"
+    "test": "jest --config jest.config.js"
   }
 }
