--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "preact-compat-enzyme": "^0.2.5",
     "preact-render-to-string": "^3.6.3",
     "preact-test-utils": "^0.1.3",
+    "preact-transition-group": "^1.1.1",
     "prettier-eslint-cli": "^4.1.1",
     "rimraf": "^2.6.1",
     "run-sequence": "^2.0.0",
@@ -56,6 +57,19 @@
     "webpack": "^3.3.0"
   },
   "homepage": "https://github.com/uncovertruth/userdive-tag-paster#readme",
+  "jest": {
+    "collectCoverage": true,
+    "moduleNameMapper": {
+      "^react-dom/server$": "preact-render-to-string",
+      "^react-dom/test-utils$": "preact-test-utils",
+      "^react-dom$": "preact-compat-enzyme",
+      "^react-test-renderer/shallow$": "preact-test-utils",
+      "^react-test-renderer$": "preact-test-utils",
+      "^react-addons-test-utils$": "preact-test-utils",
+      "^react-addons-transition-group$": "preact-transition-group",
+      "^react$": "preact-compat-enzyme"
+    }
+  },
   "keywords": [],
   "lint-staged": {
     "*.{js,jsx}": [
@@ -90,6 +104,6 @@
     "precommit": "lint-staged",
     "release": "gulp package",
     "tag": "uglifyjs app/tag.js -m",
-    "test": "jest --config jest.config.js"
+    "test": "jest"
   }
 }
