--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
-    "preact": "^8.2.1",
-    "preact-compat": "^3.17.0"
+    "preact": "^8.2.1"
   },
   "devDependencies": {
     "@uncovertruth/eslint-config-flowtype": "^1.1.0",
@@ -25,6 +24,7 @@
     "codecov": "^2.3.0",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
+    "enzyme": "^2.9.1",
     "eslint": "^4.3.0",
     "eslint-plugin-jest": "^20.0.3",
     "faker": "^4.1.0",
@@ -42,6 +42,10 @@
     "main-bower-files": "^2.13.1",
     "mock-local-storage": "^1.0.4",
     "npm-run-all": "^4.0.2",
+    "preact-compat-enzyme": "^0.2.5",
+    "preact-render-to-string": "^3.6.3",
+    "preact-test-utils": "^0.1.3",
+    "preact-transition-group": "^1.1.1",
     "prettier-eslint-cli": "^4.1.1",
     "rimraf": "^2.6.1",
     "run-sequence": "^2.0.0",
@@ -54,7 +58,17 @@
   },
   "homepage": "https://github.com/uncovertruth/userdive-tag-paster#readme",
   "jest": {
-    "collectCoverage": true
+    "collectCoverage": true,
+    "moduleNameMapper": {
+      "^react-dom/server$": "preact-render-to-string",
+      "^react-dom/test-utils$": "preact-test-utils",
+      "^react-dom$": "preact-compat-enzyme",
+      "^react-test-renderer/shallow$": "preact-test-utils",
+      "^react-test-renderer$": "preact-test-utils",
+      "^react-addons-test-utils$": "preact-test-utils",
+      "^react-addons-transition-group$": "preact-transition-group",
+      "^react$": "preact-compat-enzyme"
+    }
   },
   "keywords": [],
   "lint-staged": {
@@ -79,8 +93,9 @@
     "b:gulp": "gulp build",
     "b:images": "imagemin app/images/*.png --out-dir=dist/images/",
     "b:webpack": "cross-env NODE_ENV=production webpack",
-    "build": "run-s clean b:webpack b:images b:gulp",
-    "clean": "find app -name '*.html' -delete && rimraf dist app/scripts package coverage",
+    "b:html": "cp ./app/*.html dist/",
+    "build": "run-s clean b:webpack b:images b:html b:gulp",
+    "clean": "rimraf dist app/scripts package coverage",
     "coverage": "codecov -t $CODECOV_TOKEN -f ./coverage/lcov.info",
     "lint": "run-p lint:*",
     "lint:css": "stylelint app/styles/*.css",
