--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "codecov": "^2.3.0",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
-    "enzyme": "^2.9.1",
     "eslint": "^4.3.0",
     "eslint-plugin-jest": "^20.0.3",
     "faker": "^4.1.0",
@@ -42,10 +41,7 @@
     "main-bower-files": "^2.13.1",
     "mock-local-storage": "^1.0.4",
     "npm-run-all": "^4.0.2",
-    "preact-compat-enzyme": "^0.2.5",
     "preact-render-to-string": "^3.6.3",
-    "preact-test-utils": "^0.1.3",
-    "preact-transition-group": "^1.1.1",
     "prettier-eslint-cli": "^4.1.1",
     "rimraf": "^2.6.1",
     "run-sequence": "^2.0.0",
@@ -58,17 +54,7 @@
   },
   "homepage": "https://github.com/uncovertruth/userdive-tag-paster#readme",
   "jest": {
-    "collectCoverage": true,
-    "moduleNameMapper": {
-      "^react-dom/server$": "preact-render-to-string",
-      "^react-dom/test-utils$": "preact-test-utils",
-      "^react-dom$": "preact-compat-enzyme",
-      "^react-test-renderer/shallow$": "preact-test-utils",
-      "^react-test-renderer$": "preact-test-utils",
-      "^react-addons-test-utils$": "preact-test-utils",
-      "^react-addons-transition-group$": "preact-transition-group",
-      "^react$": "preact-compat-enzyme"
-    }
+    "collectCoverage": true
   },
   "keywords": [],
   "lint-staged": {
@@ -79,6 +65,7 @@
     ],
     "*.css": [
       "stylefmt",
+      "prettier --write --parser=postcss",
       "stylelint",
       "git add"
     ]
@@ -90,6 +77,7 @@
     "url": "git+ssh://git@github.com/uncovertruth/userdive-tag-paster.git"
   },
   "scripts": {
+    "postinstall": "flow-typed install -s",
     "b:gulp": "gulp build",
     "b:images": "imagemin app/images/*.png --out-dir=dist/images/",
     "b:webpack": "cross-env NODE_ENV=production webpack",
