--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "babel-jest": "^22.0.4",
     "babel-loader": "8.0.0-beta.0",
     "codecov": "^3.0.0",
-    "cross-env": "^5.1.3",
     "css-loader": "^0.28.7",
     "eslint": "^4.14.0",
     "eslint-plugin-jest": "^21.5.0",
@@ -84,14 +83,14 @@
     "b:gulp": "gulp build",
     "b:html": "cp ./app/*.html dist/",
     "b:images": "imagemin app/images/*.png --out-dir=dist/images/",
-    "b:webpack": "webpack --env production",
+    "b:webpack": "webpack -p --env production",
     "build": "run-s clean b:webpack b:images b:html b:gulp",
     "clean": "rimraf dist app/scripts package coverage",
     "coverage": "codecov -f ./coverage/lcov.info",
     "lint": "run-p lint:*",
     "lint:css": "stylelint app/styles/*.css",
     "lint:flow": "flow",
-    "lint:js": "eslint . --cache",
+    "lint:js": "eslint . --cache --ext=js,jsx",
     "precommit": "lint-staged",
     "release": "gulp package",
     "tag": "uglifyjs app/tag.js -m",
