--- a/.babelrc
+++ b/.babelrc
@@ -17,7 +17,8 @@
     [
       "@babel/plugin-transform-react-jsx",
       {
-        "pragma": "h"
+        "pragma": "h",
+        "throwIfNamespace": false
       }
     ],
     "@babel/plugin-transform-runtime"
