--- a/package.json
+++ b/package.json
@@ -19,21 +19,21 @@
     "@uncovertruth/eslint-config-flowtype": "^1.4.0",
     "@uncovertruth/eslint-config-react": "^0.1.0",
     "@uncovertruth/stylelint-config": "^0.8.0",
-    "babel-core": "^7.0.0-0",
+    "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^22.0.4",
     "babel-loader": "8.0.0-beta.0",
     "codecov": "^3.0.0",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.8",
     "eslint": "^4.14.0",
     "eslint-plugin-jest": "^21.5.0",
     "faker": "^4.1.0",
-    "flow-bin": "^0.61.0",
+    "flow-bin": "^0.62.0",
     "flow-typed": "^2.2.3",
     "gulp": "^3.9.1",
     "gulp-chrome-manifest": "^0.0.13",
     "gulp-load-plugins": "^1.5.0",
-    "gulp-size": "^2.1.0",
-    "gulp-zip": "^4.0.0",
+    "gulp-size": "^3.0.0",
+    "gulp-zip": "^4.1.0",
     "husky": "^0.14.3",
     "imagemin-cli": "^3.0.0",
     "jest": "22.0.4",
@@ -44,12 +44,12 @@
     "preact-render-to-string": "^3.7.0",
     "prettier-eslint-cli": "^4.7.0",
     "rimraf": "^2.6.2",
-    "run-sequence": "^2.2.0",
+    "run-sequence": "^2.2.1",
     "sinon-chrome": "^2.2.1",
     "style-loader": "^0.19.1",
     "stylelint": "^8.4.0",
     "then-chrome": "^1.0.7",
-    "uglifyjs-webpack-plugin": "^1.1.4",
+    "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^3.10.0"
   },
   "homepage": "https://github.com/uncovertruth/userdive-tag-paster#readme",
