--- a/package.json
+++ b/package.json
@@ -7,53 +7,56 @@
     "url": "https://github.com/uncovertruth/userdive-tag-paster/pulls"
   },
   "dependencies": {
-    "babel-runtime": "^6.26.0",
-    "preact": "^8.2.1"
+    "@babel/runtime": "^7.0.0-beta.36",
+    "preact": "^8.2.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.36",
+    "@babel/plugin-transform-react-jsx": "^7.0.0-beta.36",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.36",
+    "@babel/preset-env": "^7.0.0-beta.36",
+    "@babel/preset-flow": "^7.0.0-beta.36",
     "@uncovertruth/eslint-config-flowtype": "^1.4.0",
     "@uncovertruth/eslint-config-react": "^0.1.0",
     "@uncovertruth/stylelint-config": "^0.8.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-flow": "^6.23.0",
-    "babel-preset-preact": "^1.1.0",
-    "babel-register": "^6.24.1",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "^22.0.4",
+    "babel-loader": "8.0.0-beta.0",
     "codecov": "^3.0.0",
-    "cross-env": "^5.1.3",
-    "css-loader": "^0.28.4",
+    "css-loader": "^0.28.8",
     "eslint": "^4.14.0",
     "eslint-plugin-jest": "^21.5.0",
     "faker": "^4.1.0",
-    "flow-bin": "^0.61.0",
+    "flow-bin": "^0.62.0",
     "flow-typed": "^2.2.3",
     "gulp": "^3.9.1",
     "gulp-chrome-manifest": "^0.0.13",
     "gulp-load-plugins": "^1.5.0",
-    "gulp-size": "^2.1.0",
-    "gulp-zip": "^4.0.0",
+    "gulp-size": "^3.0.0",
+    "gulp-zip": "^4.1.0",
     "husky": "^0.14.3",
     "imagemin-cli": "^3.0.0",
     "jest": "22.0.4",
     "lint-staged": "^6.0.0",
     "main-bower-files": "^2.13.1",
     "mock-local-storage": "^1.0.5",
-    "npm-run-all": "^4.0.2",
-    "preact-render-to-string": "^3.6.3",
+    "npm-run-all": "^4.1.2",
+    "preact-render-to-string": "^3.7.0",
     "prettier-eslint-cli": "^4.7.0",
-    "rimraf": "^2.6.1",
-    "run-sequence": "^2.0.0",
+    "rimraf": "^2.6.2",
+    "run-sequence": "^2.2.1",
     "sinon-chrome": "^2.2.1",
     "style-loader": "^0.19.1",
     "stylelint": "^8.4.0",
     "then-chrome": "^1.0.7",
-    "uglifyjs-webpack-plugin": "^1.0.0",
+    "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^3.10.0"
   },
   "homepage": "https://github.com/uncovertruth/userdive-tag-paster#readme",
   "jest": {
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    },
     "collectCoverage": true
   },
   "keywords": [],
@@ -64,8 +67,8 @@
       "git add"
     ],
     "*.css": [
-      "stylefmt",
-      "prettier --write --parser=postcss",
+      "prettier --write --parser postcss",
+      "stylelint --fix",
       "stylelint",
       "git add"
     ]
@@ -77,18 +80,17 @@
     "url": "git+ssh://git@github.com/uncovertruth/userdive-tag-paster.git"
   },
   "scripts": {
-    "postinstall": "flow-typed install -s",
     "b:gulp": "gulp build",
-    "b:images": "imagemin app/images/*.png --out-dir=dist/images/",
-    "b:webpack": "cross-env NODE_ENV=production webpack",
     "b:html": "cp ./app/*.html dist/",
+    "b:images": "imagemin app/images/*.png --out-dir=dist/images/",
+    "b:webpack": "webpack -p --env production",
     "build": "run-s clean b:webpack b:images b:html b:gulp",
     "clean": "rimraf dist app/scripts package coverage",
-    "coverage": "codecov -t $CODECOV_TOKEN -f ./coverage/lcov.info",
+    "coverage": "codecov -f ./coverage/lcov.info",
     "lint": "run-p lint:*",
     "lint:css": "stylelint app/styles/*.css",
     "lint:flow": "flow",
-    "lint:js": "eslint . --cache",
+    "lint:js": "eslint . --cache --ext=js,jsx",
     "precommit": "lint-staged",
     "release": "gulp package",
     "tag": "uglifyjs app/tag.js -m",
