--- a/package.json
+++ b/package.json
@@ -11,23 +11,16 @@
     "preact": "^8.2.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.38",
-    "@babel/plugin-transform-react-jsx": "^7.0.0-beta.39",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.38",
-    "@babel/preset-env": "^7.0.0-beta.39",
-    "@babel/preset-flow": "^7.0.0-beta.39",
+    "@types/react": "^16.0.36",
     "@uncovertruth/eslint-config-flowtype": "^1.5.0",
     "@uncovertruth/eslint-config-react": "^0.3.0",
-    "@uncovertruth/stylelint-config": "^0.9.0",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^22.1.0",
-    "babel-loader": "8.0.0-beta.0",
+    "@uncovertruth/stylelint-config": "^0.10.0",
     "codecov": "^3.0.0",
     "css-loader": "^0.28.9",
     "eslint": "^4.17.0",
     "eslint-plugin-jest": "^21.7.0",
     "faker": "^4.1.0",
-    "flow-bin": "^0.64.0",
+    "flow-bin": "^0.65.0",
     "flow-typed": "^2.3.0",
     "gulp": "^3.9.1",
     "gulp-chrome-manifest": "^0.0.13",
@@ -49,6 +42,8 @@
     "style-loader": "^0.20.1",
     "stylelint": "^8.4.0",
     "then-chrome": "^1.0.7",
+    "ts-loader": "^3.4.0",
+    "typescript-eslint-parser": "^12.0.0",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.10.0"
   },
