--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react": "^16.2.0"
   },
   "devDependencies": {
-    "@uncovertruth/eslint-config-flowtype": "^1.5.0",
+    "@uncovertruth/eslint-config": "^3.4.0",
     "@uncovertruth/eslint-config-react": "^0.3.0",
     "@uncovertruth/stylelint-config": "^0.10.0",
     "@uncovertruth/tslint-config": "^1.3.0",
@@ -41,6 +41,7 @@
     "style-loader": "^0.20.1",
     "stylelint": "^8.4.0",
     "then-chrome": "^1.0.7",
+    "tslint": "^5.9.1",
     "typescript": "^2.7.1",
     "typescript-eslint-parser": "^12.0.0",
     "uglifyjs-webpack-plugin": "^1.1.8",
@@ -55,9 +56,9 @@
   },
   "keywords": [],
   "lint-staged": {
-    "*.{js,jsx}": [
+    "*.{ts,tsx}": [
       "prettier-eslint --write",
-      "eslint --cache",
+      "tslint --fix",
       "git add"
     ],
     "*.css": [
@@ -83,9 +84,10 @@
     "coverage": "codecov -f ./coverage/lcov.info",
     "lint": "run-p lint:*",
     "lint:css": "stylelint app/styles/*.css",
-    "lint:js": "eslint . --cache --ext=ts,tsx",
+    "lint:ts": "tslint '{src,test}/**/*.ts'",
     "precommit": "lint-staged",
     "release": "gulp package",
+    "pretest": "tsc --jsx react __tests__/*.ts",
     "tag": "uglifyjs app/tag.js -m",
     "test": "jest"
   }
