--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
     "url": "https://github.com/uncovertruth/userdive-tag-paster/pulls"
   },
   "dependencies": {
-    "preact": "^8.2.7",
-    "react": "^16.2.0"
+    "preact": "^8.2.7"
   },
   "devDependencies": {
+    "@types/node": "^8.9.1",
     "@uncovertruth/eslint-config": "^3.4.0",
     "@uncovertruth/eslint-config-react": "^0.3.0",
     "@uncovertruth/stylelint-config": "^0.10.0",
     "@uncovertruth/tslint-config": "^1.3.0",
-    "awesome-typescript-loader": "^3.4.1",
     "codecov": "^3.0.0",
     "css-loader": "^0.28.9",
     "eslint": "^4.17.0",
@@ -28,7 +27,7 @@
     "gulp-zip": "^4.1.0",
     "husky": "^0.14.3",
     "imagemin-cli": "^3.0.0",
-    "jest": "22.1.4",
+    "jest": "22.2.1",
     "lint-staged": "^6.1.0",
     "main-bower-files": "^2.13.1",
     "mock-local-storage": "^1.0.5",
@@ -41,6 +40,7 @@
     "style-loader": "^0.20.1",
     "stylelint": "^8.4.0",
     "then-chrome": "^1.0.7",
+    "ts-loader": "^3.5.0",
     "tslint": "^5.9.1",
     "typescript": "^2.7.1",
     "typescript-eslint-parser": "^12.0.0",
@@ -60,12 +60,6 @@
       "prettier-eslint --write",
       "tslint --fix",
       "git add"
-    ],
-    "*.css": [
-      "prettier --write --parser postcss",
-      "stylelint --fix",
-      "stylelint",
-      "git add"
     ]
   },
   "main": "n/a",
@@ -84,7 +78,7 @@
     "coverage": "codecov -f ./coverage/lcov.info",
     "lint": "run-p lint:*",
     "lint:css": "stylelint app/styles/*.css",
-    "lint:ts": "tslint '{src,test}/**/*.ts'",
+    "lint:ts": "tslint '{app,__tests__}/**/*.ts'",
     "precommit": "lint-staged",
     "release": "gulp package",
     "pretest": "tsc --jsx react __tests__/*.ts",
