--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "lib": ["es6", "es7", "DOM"],
     "jsx": "react",
+    "jsxFactory": "h",
     "module": "commonjs",
     "moduleResolution": "node",
     "noImplicitAny": false,
@@ -11,6 +12,10 @@
   },
   "compileOnSave": false,
   "buildOnSave": false,
+  "include": [
+    "__tests__/*.ts",
+    "app/**/*.ts"
+  ],
   "exclude": [
     "node_modules"
   ]
