--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
     "preact": "^8.2.7"
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.59",
     "@types/gulp": "^4.0.5",
     "@types/gulp-load-plugins": "^0.0.31",
-    "@types/jest": "^22.1.1",
-    "@types/node": "^8.9.1",
+    "@types/jest": "^22.1.3",
+    "@types/node": "^9.4.6",
+    "@types/sinon-chrome": "^2.2.0",
     "@uncovertruth/eslint-config": "^3.4.0",
     "@uncovertruth/eslint-config-react": "^0.3.0",
     "@uncovertruth/stylelint-config": "^0.10.0",
     "@uncovertruth/tslint-config": "^1.3.0",
     "codecov": "^3.0.0",
-    "css-loader": "^0.28.9",
-    "eslint": "^4.17.0",
-    "eslint-plugin-jest": "^21.7.0",
+    "css-loader": "^0.28.10",
+    "eslint": "^4.18.1",
+    "eslint-plugin-jest": "^21.12.2",
     "faker": "^4.1.0",
     "gulp": "^3.9.1",
     "gulp-chrome-manifest": "^0.0.13",
@@ -30,27 +32,27 @@
     "gulp-zip": "^4.1.0",
     "husky": "^0.14.3",
     "imagemin-cli": "^3.0.0",
-    "jest": "22.2.1",
-    "lint-staged": "^6.1.0",
+    "jest": "22.4.2",
+    "lint-staged": "^7.0.0",
     "main-bower-files": "^2.13.1",
     "mock-local-storage": "^1.0.5",
     "npm-run-all": "^4.1.2",
     "preact-render-to-string": "^3.7.0",
-    "prettier-eslint-cli": "^4.7.0",
+    "prettier-eslint-cli": "^4.7.1",
     "rimraf": "^2.6.2",
     "run-sequence": "^2.2.1",
     "sinon-chrome": "^2.2.4",
-    "style-loader": "^0.20.1",
-    "stylelint": "^8.4.0",
+    "style-loader": "^0.20.2",
+    "stylelint": "^9.1.1",
     "then-chrome": "^1.0.7",
-    "ts-jest": "^22.0.3",
+    "ts-jest": "^22.0.4",
     "ts-loader": "^3.5.0",
-    "ts-node": "^4.1.0",
+    "ts-node": "^5.0.0",
     "tslint": "^5.9.1",
-    "typescript": "^2.7.1",
-    "typescript-eslint-parser": "^12.0.0",
-    "uglifyjs-webpack-plugin": "^1.1.8",
-    "webpack": "^3.10.0"
+    "typescript": "^2.7.2",
+    "typescript-eslint-parser": "^14.0.0",
+    "uglifyjs-webpack-plugin": "^1.2.0",
+    "webpack": "^3.11.0"
   },
   "homepage": "https://github.com/uncovertruth/userdive-tag-paster#readme",
   "jest": {
