--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/chrome": "^0.0.59",
     "@types/gulp": "^4.0.5",
     "@types/gulp-load-plugins": "^0.0.31",
+    "@types/gulp-size": "^2.1.1",
     "@types/jest": "^22.1.3",
     "@types/node": "^9.4.6",
     "@types/sinon-chrome": "^2.2.0",
